--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <th scope="col">Артикул</th>
                     <th scope="col">Назва</th>
                     <th scope="col">Кількість</th>
+                    <th scope="col">Ціна</th>
                 </tr>
                 </thead>
                 <tbody id="myTable">
@@ -41,6 +42,9 @@
                 </tr>
                 </tbody>
             </table>
+            <div class="col">
+                <p id="Sum" class="text-xl-right font-weight-bold">0</p>
+            </div>
             <button type="button" id="getOrder" class="btn btn-primary">Скачати</button>
         </div>
     </div>
