--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </tbody>
             </table>
             <div class="col">
-                <p id="Sum" class="text-xl-right font-weight-bold">0</p>
+                <p id="Sum" class="text-right font-weight-bold">0</p>
             </div>
             <button type="button" id="getOrder" class="btn btn-primary">Скачати</button>
         </div>
