--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Артикул</th>
                     <th scope="col">Назва</th>
-                    <th scope="col">Кількість</th>
+                    <th scope="col">К-ть</th>
                     <th scope="col">Ціна</th>
                 </tr>
                 </thead>
